argocd/backstage/clusters/shashank-b1/apps/test-app/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: test
  labels:
    app: test-app
spec:
  ports:
  - name: "77"
    port: 77
    targetPort: 77
  selector:
    app: test-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
      backstage.io/kubernetes-id: test-app
  template:
    metadata:
      labels:
        app: test-app
        backstage.io/kubernetes-id: test-app
    spec:
      serviceAccountName: test-app
      containers:
      - image: docker.io/shashankram/sample-react-app:latest
        imagePullPolicy: IfNotPresent
        name: test-app
        ports:
        - containerPort: 77
