argocd/backstage/clusters/shashank-b1/apps/test-app/gloo-httproute.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-app
  namespace: test
spec:
  parentRefs:
  - name: http-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: 
    - path:
        type: PathPrefix
        value: 
    backendRefs:
    - name: test-app
      port: 80
