argocd/backstage/clusters/shashank-b1/apps/test-app/istio-authz.yaml

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-app
  namespace: test
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
          - foo
          - baz
    to:
    - operation:
        methods: ["GET"]
        paths: ["/"]
